Layer3/CParser.java
/* Generated By:JavaCC: Do not edit this line. CParser.java */
import syntaxtree.*;
import java.util.Vector;


public class CParser implements CParserConstants {

  static final public Goal Goal() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   VariablesAndFunctions n1;
   PMain n2;
   NodeListOptional n3 = new NodeListOptional();
   VariablesAndFunctions n4;
   NodeToken n5;
   Token n6;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      n1 = VariablesAndFunctions();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n2 = PMain();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNSIGNED:
      case TYPEDEF:
      case DOUBLE:
      case STRUCT:
      case STATIC:
      case SIGNED:
      case FLOAT:
      case SHORT:
      case LONG:
      case ENUM:
      case VOID:
      case CHAR:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      n4 = VariablesAndFunctions();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    n6 = jj_consume_token(0);
      n6.beginColumn++; n6.endColumn++;
      n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new Goal(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public VariablesAndFunctions VariablesAndFunctions() throws ParseException {
   NodeChoice n0;
   DeclarationStmt n1;
   FunctionDeclaration n2;
   StructDeclaration n3;
   EnumDeclaration n4;
   FunctionDefinition n5;
   TypeDef n6;
    if (jj_2_2(2147483647)) {
      n1 = DeclarationStmt();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_3(2147483647)) {
      n2 = FunctionDeclaration();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_4(2147483647)) {
      n3 = StructDeclaration();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_5(2147483647)) {
      n4 = EnumDeclaration();
        n0 = new NodeChoice(n4, 3);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNSIGNED:
      case DOUBLE:
      case STRUCT:
      case STATIC:
      case SIGNED:
      case FLOAT:
      case SHORT:
      case LONG:
      case ENUM:
      case VOID:
      case CHAR:
      case INT:
      case IDENTIFIER:
        n5 = FunctionDefinition();
        n0 = new NodeChoice(n5, 4);
        break;
      case TYPEDEF:
        n6 = TypeDef();
        n0 = new NodeChoice(n6, 5);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new VariablesAndFunctions(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public DeclarationStmt DeclarationStmt() throws ParseException {
   BaseType n0;
   ObjectList n1;
   NodeToken n2;
   Token n3;
    n0 = BaseType();
    n1 = ObjectList();
    n3 = jj_consume_token(55);
            n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new DeclarationStmt(n0,n1,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionDefinition FunctionDefinition() throws ParseException {
   Type n0;
   Identifier n1;
   NodeToken n2;
   Token n3;
   NodeOptional n4 = new NodeOptional();
   ArgList n5;
   NodeToken n6;
   Token n7;
   Block n8;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(56);
            n2 = JTBToolkit.makeNodeToken(n3);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNSIGNED:
    case DOUBLE:
    case STRUCT:
    case STATIC:
    case SIGNED:
    case FLOAT:
    case SHORT:
    case LONG:
    case ENUM:
    case VOID:
    case CHAR:
    case INT:
    case IDENTIFIER:
      n5 = ArgList();
        n4.addNode(n5);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    n7 = jj_consume_token(57);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = Block();
     {if (true) return new FunctionDefinition(n0,n1,n2,n4,n6,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionDeclaration FunctionDeclaration() throws ParseException {
   Type n0;
   Identifier n1;
   NodeToken n2;
   Token n3;
   NodeOptional n4 = new NodeOptional();
   ParameterList n5;
   NodeToken n6;
   Token n7;
   NodeToken n8;
   Token n9;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(56);
            n2 = JTBToolkit.makeNodeToken(n3);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNSIGNED:
    case DOUBLE:
    case STRUCT:
    case STATIC:
    case SIGNED:
    case FLOAT:
    case SHORT:
    case LONG:
    case ENUM:
    case VOID:
    case CHAR:
    case INT:
    case IDENTIFIER:
      n5 = ParameterList();
        n4.addNode(n5);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    n7 = jj_consume_token(57);
            n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(55);
            n8 = JTBToolkit.makeNodeToken(n9);
     {if (true) return new FunctionDeclaration(n0,n1,n2,n4,n6,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public ParameterList ParameterList() throws ParseException {
   ParameterDeclaration n0;
   NodeListOptional n1 = new NodeListOptional();
   NodeSequence n2;
   NodeToken n3;
   Token n4;
   ParameterDeclaration n5;
    n0 = ParameterDeclaration();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
        n2 = new NodeSequence(2);
      n4 = jj_consume_token(58);
               n3 = JTBToolkit.makeNodeToken(n4);
        n2.addNode(n3);
      n5 = ParameterDeclaration();
        n2.addNode(n5);
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ParameterList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ParameterDeclaration ParameterDeclaration() throws ParseException {
   Type n0;
   NodeOptional n1 = new NodeOptional();
   Identifier n2;
    n0 = Type();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n2 = Identifier();
        n1.addNode(n2);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
     {if (true) return new ParameterDeclaration(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public StructDeclaration StructDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   Identifier n3;
   NodeToken n4;
   Token n5;
   NodeListOptional n6 = new NodeListOptional();
   DeclarationStmt n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
    n1 = jj_consume_token(STRUCT);
                 n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n3 = Identifier();
        n2.addNode(n3);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    n5 = jj_consume_token(59);
            n4 = JTBToolkit.makeNodeToken(n5);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNSIGNED:
      case DOUBLE:
      case STRUCT:
      case STATIC:
      case SIGNED:
      case FLOAT:
      case SHORT:
      case LONG:
      case ENUM:
      case VOID:
      case CHAR:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      n7 = DeclarationStmt();
        n6.addNode(n7);
    }
     n6.nodes.trimToSize();
    n9 = jj_consume_token(60);
            n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(55);
             n10 = JTBToolkit.makeNodeToken(n11);
     {if (true) return new StructDeclaration(n0,n2,n4,n6,n8,n10);}
    throw new Error("Missing return statement in function");
  }

  static final public TypeDef TypeDef() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(TYPEDEF);
                  n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = Identifier();
    n5 = jj_consume_token(55);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new TypeDef(n0,n2,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public EnumDeclaration EnumDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   Identifier n5;
   NodeListOptional n6 = new NodeListOptional();
   NodeSequence n7;
   NodeToken n8;
   Token n9;
   Identifier n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
    n1 = jj_consume_token(ENUM);
               n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(59);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Identifier();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
        n7 = new NodeSequence(2);
      n9 = jj_consume_token(58);
               n8 = JTBToolkit.makeNodeToken(n9);
        n7.addNode(n8);
      n10 = Identifier();
        n7.addNode(n10);
        n6.addNode(n7);
    }
     n6.nodes.trimToSize();
    n12 = jj_consume_token(60);
             n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(55);
             n13 = JTBToolkit.makeNodeToken(n14);
     {if (true) return new EnumDeclaration(n0,n2,n3,n5,n6,n11,n13);}
    throw new Error("Missing return statement in function");
  }

  static final public PMain PMain() throws ParseException {
   MainReturnType n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeOptional n5 = new NodeOptional();
   NodeSequence n6;
   NodeToken n7;
   Token n8;
   Identifier n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   NodeToken n14;
   Token n15;
   NodeOptional n16;
   NodeToken n17;
   Token n18;
   Identifier n19;
   NodeOptional n20;
   NodeSequence n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   NodeToken n26;
   Token n27;
   Block n28;
    n0 = MainReturnType();
    n2 = jj_consume_token(MAIN);
               n1 = JTBToolkit.makeNodeToken(n2);
    n4 = jj_consume_token(56);
            n3 = JTBToolkit.makeNodeToken(n4);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
        n16 = new NodeOptional();
        n20 = new NodeOptional();
        n6 = new NodeSequence(8);
      n8 = jj_consume_token(INT);
                 n7 = JTBToolkit.makeNodeToken(n8);
        n6.addNode(n7);
      n9 = Identifier();
        n6.addNode(n9);
      n11 = jj_consume_token(58);
                n10 = JTBToolkit.makeNodeToken(n11);
        n6.addNode(n10);
      n13 = jj_consume_token(CHAR);
                   n12 = JTBToolkit.makeNodeToken(n13);
        n6.addNode(n12);
      n15 = jj_consume_token(61);
                n14 = JTBToolkit.makeNodeToken(n15);
        n6.addNode(n14);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 61:
        n18 = jj_consume_token(61);
                   n17 = JTBToolkit.makeNodeToken(n18);
           n16.addNode(n17);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
        n6.addNode(n16);
      n19 = Identifier();
        n6.addNode(n19);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 62:
           n21 = new NodeSequence(2);
        n23 = jj_consume_token(62);
                   n22 = JTBToolkit.makeNodeToken(n23);
           n21.addNode(n22);
        n25 = jj_consume_token(63);
                   n24 = JTBToolkit.makeNodeToken(n25);
           n21.addNode(n24);
           n20.addNode(n21);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
        n6.addNode(n20);
        n5.addNode(n6);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    n27 = jj_consume_token(57);
             n26 = JTBToolkit.makeNodeToken(n27);
    n28 = Block();
     {if (true) return new PMain(n0,n1,n3,n5,n26,n28);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   BaseType n0;
   NodeListOptional n1 = new NodeListOptional();
   NodeToken n2;
   Token n3;
    n0 = BaseType();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 61:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      n3 = jj_consume_token(61);
               n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new Type(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public BaseType BaseType() throws ParseException {
   NodeOptional n0 = new NodeOptional();
   StorageClass n1;
   TypeSpecifier n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC:
      n1 = StorageClass();
        n0.addNode(n1);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    n2 = TypeSpecifier();
     {if (true) return new BaseType(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public StorageClass StorageClass() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(STATIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new StorageClass(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public TypeSpecifier TypeSpecifier() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   Identifier n19;
   NodeSequence n20;
   NodeToken n21;
   Token n22;
   NodeOptional n23 = new NodeOptional();
   Identifier n24;
   NodeOptional n25 = new NodeOptional();
   NodeSequence n26;
   NodeToken n27;
   Token n28;
   NodeListOptional n29;
   DeclarationStmt n30;
   NodeToken n31;
   Token n32;
   NodeSequence n33;
   NodeToken n34;
   Token n35;
   NodeOptional n36 = new NodeOptional();
   Identifier n37;
   NodeToken n38;
   Token n39;
   Identifier n40;
   NodeListOptional n41 = new NodeListOptional();
   NodeSequence n42;
   NodeToken n43;
   Token n44;
   Identifier n45;
   NodeToken n46;
   Token n47;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      n2 = jj_consume_token(INT);
                 n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case VOID:
      n4 = jj_consume_token(VOID);
                  n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    case CHAR:
      n6 = jj_consume_token(CHAR);
                  n5 = JTBToolkit.makeNodeToken(n6);
        n0 = new NodeChoice(n5, 2);
      break;
    case SHORT:
      n8 = jj_consume_token(SHORT);
                   n7 = JTBToolkit.makeNodeToken(n8);
        n0 = new NodeChoice(n7, 3);
      break;
    case LONG:
      n10 = jj_consume_token(LONG);
                   n9 = JTBToolkit.makeNodeToken(n10);
        n0 = new NodeChoice(n9, 4);
      break;
    case FLOAT:
      n12 = jj_consume_token(FLOAT);
                    n11 = JTBToolkit.makeNodeToken(n12);
        n0 = new NodeChoice(n11, 5);
      break;
    case DOUBLE:
      n14 = jj_consume_token(DOUBLE);
                     n13 = JTBToolkit.makeNodeToken(n14);
        n0 = new NodeChoice(n13, 6);
      break;
    case SIGNED:
      n16 = jj_consume_token(SIGNED);
                     n15 = JTBToolkit.makeNodeToken(n16);
        n0 = new NodeChoice(n15, 7);
      break;
    case UNSIGNED:
      n18 = jj_consume_token(UNSIGNED);
                       n17 = JTBToolkit.makeNodeToken(n18);
        n0 = new NodeChoice(n17, 8);
      break;
    case IDENTIFIER:
      n19 = Identifier();
        n0 = new NodeChoice(n19, 9);
      break;
    case STRUCT:
        n20 = new NodeSequence(3);
      n22 = jj_consume_token(STRUCT);
                     n21 = JTBToolkit.makeNodeToken(n22);
        n20.addNode(n21);
      if (jj_2_6(2147483647)) {
        n24 = Identifier();
           n23.addNode(n24);
      } else {
        ;
      }
        n20.addNode(n23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
           n29 = new NodeListOptional();
           n26 = new NodeSequence(3);
        n28 = jj_consume_token(59);
                   n27 = JTBToolkit.makeNodeToken(n28);
           n26.addNode(n27);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UNSIGNED:
          case DOUBLE:
          case STRUCT:
          case STATIC:
          case SIGNED:
          case FLOAT:
          case SHORT:
          case LONG:
          case ENUM:
          case VOID:
          case CHAR:
          case INT:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[14] = jj_gen;
            break label_7;
          }
          n30 = DeclarationStmt();
              n29.addNode(n30);
        }
           n29.nodes.trimToSize();
           n26.addNode(n29);
        n32 = jj_consume_token(60);
                   n31 = JTBToolkit.makeNodeToken(n32);
           n26.addNode(n31);
           n25.addNode(n26);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
        n20.addNode(n25);
        n0 = new NodeChoice(n20, 10);
      break;
    case ENUM:
        n33 = new NodeSequence(6);
      n35 = jj_consume_token(ENUM);
                   n34 = JTBToolkit.makeNodeToken(n35);
        n33.addNode(n34);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        n37 = Identifier();
           n36.addNode(n37);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
        n33.addNode(n36);
      n39 = jj_consume_token(59);
                n38 = JTBToolkit.makeNodeToken(n39);
        n33.addNode(n38);
      n40 = Identifier();
        n33.addNode(n40);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_8;
        }
           n42 = new NodeSequence(2);
        n44 = jj_consume_token(58);
                   n43 = JTBToolkit.makeNodeToken(n44);
           n42.addNode(n43);
        n45 = Identifier();
           n42.addNode(n45);
           n41.addNode(n42);
      }
        n41.nodes.trimToSize();
        n33.addNode(n41);
      n47 = jj_consume_token(60);
                n46 = JTBToolkit.makeNodeToken(n47);
        n33.addNode(n46);
        n0 = new NodeChoice(n33, 11);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new TypeSpecifier(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgList ArgList() throws ParseException {
   Arg n0;
   NodeListOptional n1 = new NodeListOptional();
   NodeSequence n2;
   NodeToken n3;
   Token n4;
   Arg n5;
    n0 = Arg();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
        n2 = new NodeSequence(2);
      n4 = jj_consume_token(58);
               n3 = JTBToolkit.makeNodeToken(n4);
        n2.addNode(n3);
      n5 = Arg();
        n2.addNode(n5);
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ArgList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Arg Arg() throws ParseException {
   Type n0;
   NodeOptional n1 = new NodeOptional();
   Identifier n2;
    n0 = Type();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n2 = Identifier();
        n1.addNode(n2);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
     {if (true) return new Arg(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public MainReturnType MainReturnType() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      n2 = jj_consume_token(INT);
                 n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case VOID:
      n4 = jj_consume_token(VOID);
                  n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new MainReturnType(n0);}
    throw new Error("Missing return statement in function");
  }
